[package]
name = "tanchishe"
version = "0.1.0"
edition = "2024"

[dependencies]
libc = "0.2.167"
rand = "0.8.5"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58.0", features = ["Win32_UI_WindowsAndMessaging"] }

[target.'cfg(target_os = "linux")'.dependencies]
input = "0.9.1"
